# vectra

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
.semversioner/: 0.0.1.json  0.1.0.json
.semversioner/next-release/: minor-20260509190427151778.json  patch-20260509153835847754.json
vectra/: __args__.py  __init__.py  __main__.py  conftest.py
vectra/commands/version/: __args__.py  __main__.py
vectra/configuration/: __init__.py  command_config.py
vectra/configuration/core/: __init__.py  __test__.py  conftest.py  exceptions.py  protocol.py
vectra/registration/: __init__.py  __test__.py  conftest.py  decorators.py
vectra/registration/core/: __init__.py  __test__.py  conftest.py  entry.py  exceptions.py  registry.py
vectra/registration/entries/: __init__.py  command_entry.py
vectra/registration/registries/: __init__.py  command_registry.py
vectra/utilities/: __init__.py  banner.py  logging.py
